/*
 * $Id: ChangeLog,v 1.2065 2004/01/15 13:48:19 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-01-15 20:30 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
  * xharbour/source/rtl/gtwvt/gtwvt.c
    + WVT_GETPALLETE() -> aRGBColors
    + WVT_SETPALLETE( aRGBColors )
    Retuens and set the new pallete values.

  * xharbour/tests/wvtgui.prg
    Enhanced to demonstrate the usage of Wvt_GetPallete() and Wvt_SetPallete().

  /* Few  hours back I had made this entry but is not found now */

  * xharbour/source/rtl/gtwvt/gtwvt.c
    ! Formatted.
    * Changed the sequence of some functions to their respective groups.        

2004-01-15 14:58 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * source/rtl/gtxvt/gtxvt.c
    + Added gt_tone() implementation :-))

2004-01-15 14:07 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * source/rtl/gtxvt/gtxvt.c
    ! Faster and cleaner interprocess synchronization
    ! Main application receives a hb_vmRequestQuit if the window's child
      is killed externally.

2004-01-15 02:29 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * source/rtl/gtxvt/gtxvt.c
    ! Better handling of the dialogs between the two processes.
    ! Faster drawing of box characters (removed trice repainting)
    ! Faster drawing of dot fillers (using the idea of Premizlav).
      (need fixing in case of font change).
    ! Using Premyslaw's color definitions (they looks more like dos).

2004-01-15 01:11 UTC+0100 Francesco Saverio Giudice <info@fsgiudice.com>
  * source/rtl/gtwvt/gtwvt.c
    + Added WVT_GETRGBCOLOR that returns the correspondant RBG value of
      a color ( i.e. use WVT_GetRGBColor( hb_ColorToN( "W" ) ) )
  * tests/gtclose.prg
    * Fixed typo

2004-01-15 13:00 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * source/rtl/gtwvt/gtwvt.c